<resources>
    <string name="app_name">Taller-3-Olarte-Benitez-Rodriguez</string>
    <string name="ingrese_contrase_a">Ingrese contraseña:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="ingrese_su_correo">Ingrese su correo:</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="apellido">Apellido</string>
    <string name="ingrese_su_apellido">Ingrese su apellido:</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_su_nombre">Ingrese su nombre:</string>
    <string name="registrarce">Registrarce</string>
    <string name="ingrese_numero_de_identificacion">Ingrese numero de identificacion:</string>
    <string name="identificacion">Identificacion</string>
    <string name="ingrese_su_latitud">Ingrese su latitud:</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="home">Home</string>
    <string name="disponible">Disponible</string>
    <string name="usuarios">Usuarios</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="localizar">Localizar</string>
</resources>