<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarActivity">

    <TextView
        android:id="@+id/textViewRegistrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarce"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="96dp"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_su_nombre"
        android:layout_below="@id/textViewRegistrase"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/textViewNombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nombre"
        />

    <TextView
        android:id="@+id/textViewApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_su_apellido"
        android:layout_below="@id/editTextNombre"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editTextApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@id/textViewApellido"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/apellido"
        />

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_su_correo"
        android:layout_below="@id/editTextApellido"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/textViewCorreo"
        android:hint="@string/correo"
        />

    <TextView
        android:id="@+id/textViewContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_contrase_a"
        android:layout_below="@id/editTextTextEmailAddress2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/textViewContrasena"
        android:hint="@string/contrase_a"
        />

</RelativeLayout>