<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textViewIngresarCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_su_correo"
        android:layout_below="@id/textViewIniciarSesion"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@id/textViewIngresarCorreo"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/correo"
        />

    <TextView
        android:id="@+id/textViewInsesarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_contrase_a"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/textViewInsesarContrasena"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/contrase_a"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/editTextTextPassword"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >


        <Button
            android:id="@+id/buttonIniciar"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTextPassword"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/entrar" />
        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_weight="1"
            android:layout_below="@id/editTextTextPassword"
            android:layout_centerHorizontal="true"
            />

    </LinearLayout>

</RelativeLayout>